# support-ticket-openenv

./: Dockerfile  Readme.md  baseline_scores.json  demo.py  diagnose.py  diagnose_out.txt  diagnose_results.py  diagnose_t3.py  dockerfile  environment.py  graders.py  inference.py  instruction.md  main.py  models.py  openenv.yaml  pyproject.toml  read_results.py  readme.md  readme_deploy.md  requirements.txt  results_short.txt  test_api.py  test_api_results.txt  test_results.json
server/: app.py
tests/: test_graders.py
